name:                test-invariant
version:             0.2.0.1
synopsis:            Provide common invariants to be checked with QuickCheck
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Florian Knupfer
maintainer:          fknupfer@gmail.com
category:            Testing
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:   Test.Invariant
  -- other-modules:       
  -- other-extensions:    
  build-depends:     base >=4.8 && <4.9
  hs-source-dirs:    src
  default-language:  Haskell2010

test-suite Tasty
  type:              exitcode-stdio-1.0
  build-depends:     base >=4.8 && <4.9
                   , test-invariant
                   , QuickCheck
                   , tasty
                   , tasty-quickcheck
  hs-source-dirs:    test
  main-is:           Test.hs
  default-language:  Haskell2010

benchmark Criterion
  build-depends:     base
                   , test-invariant
                   , criterion
                   , QuickCheck
  default-language:  Haskell2010
  hs-source-dirs:    bench
  main-is:           Bench.hs
  type:              exitcode-stdio-1.0  